--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.3.0", features = ["derive"] }
+ignore = "0.4.20"
 once_cell = "1.17.1"
 rayon = "1.7.0"
 regex = "1.8.2"
 tree-sitter = "0.20.10"
 tree-sitter-rust = "0.20.3"
-walkdir = "2.3.3"
 
 [lib]
 name = "tree_sitter_grep"
