--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ rayon = "1.7.0"
 regex = "1.8.2"
 tree-sitter = "0.20.10"
 tree-sitter-rust = "0.20.3"
+tree-sitter-typescript = "0.20.2"
 
 [lib]
 name = "tree_sitter_grep"
