--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.3.0", features = ["derive"] }
+grep = "0.2.12"
 ignore = "0.4.20"
 once_cell = "1.17.1"
 rayon = "1.7.0"
