--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,10 @@ grep = "0.2.12"
 ignore = "0.4.20"
 libc = "0.2.144"
 libloading = "0.8.0"
+num_cpus = "1.15.0"
 once_cell = "1.17.1"
-rayon = "1.7.0"
 regex = "1.8.2"
+threadpool = "1.8.1"
 tree-sitter = "0.20.10"
 tree-sitter-rust = "0.20.3"
 tree-sitter-typescript = "0.20.2"
@@ -26,3 +27,6 @@ name = "tree-sitter-grep"
 
 [workspace]
 members = ["tree_sitter_grep_filter_before_line_number"]
+
+[profile.release]
+debug = true
