--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,5 @@ name = "tree-sitter-grep"
 [workspace]
 members = ["tree_sitter_grep_filter_before_line_number"]
 
-[profile.release]
-debug = true
+# [profile.release]
+# debug = true
