--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ libc = "0.2.144"
 libloading = "0.8.0"
 num_cpus = "1.15.0"
 once_cell = "1.17.1"
+rayon = "1.7.0"
 regex = "1.8.2"
 threadpool = "1.8.1"
 tree-sitter = "0.20.10"
