--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           rustup component add clippy
           rustup toolchain install nightly --allow-downgrade -c rustfmt
       - uses: Swatinem/rust-cache@v2
-      # - run: cargo +nightly fmt -- --check
-      # - run: cargo clippy --all-targets --tests -- -D warnings
+      - run: cargo +nightly fmt -- --check
+      - run: cargo clippy --all-targets --tests -- -D warnings
       - run: cargo test
       - run: RUSTDOCFLAGS='--deny warnings' cargo doc --no-deps
