--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
           rustup toolchain install nightly --allow-downgrade -c rustfmt
       - uses: Swatinem/rust-cache@v2
       - run: cargo +nightly fmt -- --check
+        if: matrix.os == 'ubuntu-latest'
       - run: cargo clippy --all-targets --tests -- -D warnings
       - run: cargo test
       - run: RUSTDOCFLAGS='--deny warnings' cargo doc --no-deps
+        if: matrix.os == 'ubuntu-latest'
