--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,14 @@ name = "tree-sitter-grep"
 
 [dev-dependencies]
 assert_cmd = "2.0.11"
+escargot = "0.5.7"
 predicates = "3.0.3"
 shlex = "1.1.0"
+
+[[example]]
+name = "filter_before_line_number"
+crate-type = ["cdylib"]
+
+[[example]]
+name = "filter_before_line_10"
+crate-type = ["cdylib"]
