--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ memchr = "2.1"
 memmap = { package = "memmap2", version = "0.5.3" }
 rayon = "1.7.0"
 regex = "1.8.2"
+serde = { version = "1.0.77", features = ["derive"] }
 termcolor = "1.2.0"
 tree-sitter = "0.20.10"
 tree-sitter-javascript = "0.20.0"
