--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,13 @@ bytecount = "0.6"
 clap = { version = "4.3.0", features = ["derive"] }
 encoding_rs = "0.8.14"
 encoding_rs_io = "0.1.6"
-ignore = "0.4.20"
+ignore = { git = "https://github.com/helixbass/ripgrep", rev = "e811564" }
 libc = "0.2.144"
 libloading = "0.8.0"
 log = "0.4.5"
 memchr = "2.1"
 memmap = { package = "memmap2", version = "0.5.3" }
+once_cell = "1.18.0"
 rayon = "1.7.0"
 regex = "1.8.2"
 serde = { version = "1.0.77", features = ["derive"] }
