--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,14 +27,14 @@ bytecount = "0.6"
 clap = { version = "4.3.0", features = ["derive", "wrap_help"] }
 encoding_rs = "0.8.14"
 encoding_rs_io = "0.1.6"
-ignore = { git = "https://github.com/helixbass/ripgrep", rev = "012f2f1" }
+ignore = { package = "tree_sitter_grep_ignore", git = "https://github.com/helixbass/ripgrep", rev = "669ebd3", version = "0.4.20-dev.0" }
 libc = "0.2.144"
 libloading = "0.8.0"
 log = "0.4.5"
 memchr = "2.1"
 memmap = { package = "memmap2", version = "0.5.3" }
 once_cell = "1.18.0"
-proc_macros = { path = "proc_macros" }
+proc_macros = { package = "tree_sitter_grep_proc_macros", path = "proc_macros", version = "0.1.0-dev.0" }
 rayon = "1.7.0"
 regex = "1.8.2"
 serde = { version = "1.0.77", features = ["derive"] }
@@ -58,7 +58,7 @@ tree-sitter-objc = "1.1.0"
 tree-sitter-python = "0.20.2"
 tree-sitter-query = "0.1.0"
 tree-sitter-ruby = "0.20.0"
-tree-sitter-rust = { git = "https://github.com/helixbass/tree-sitter-rust", rev = "6327788" }
+tree-sitter-rust = { package = "tree_sitter_grep_tree-sitter-rust", git = "https://github.com/helixbass/tree-sitter-rust", rev = "781a8d9", version = "0.20.3-dev.0" }
 tree-sitter-swift = "0.3.6"
 tree-sitter-toml = "0.20.0"
 tree-sitter-typescript = "0.20.2"
