--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ proc_macros = { path = "proc_macros" }
 rayon = "1.7.0"
 regex = "1.8.2"
 serde = { version = "1.0.77", features = ["derive"] }
+strum_macros = "0.25.1"
 termcolor = "1.2.0"
 tree-sitter = "0.20.10"
 tree-sitter-c = "0.20.2"
