--- a/proc_macros/Cargo.toml
+++ b/proc_macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tree_sitter_grep_proc_macros"
-version = "0.1.0-dev.0"
+version = "0.1.0"
 edition = "2021"
 license = "Unlicense OR MIT"
 authors = [
