--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ regex = "1.8.2"
 serde = { version = "1.0.77", features = ["derive"] }
 strum_macros = "0.25.1"
 termcolor = "1.2.0"
+thiserror = "1.0.43"
 tree-sitter = "0.20.10"
 tree-sitter-c = "0.20.2"
 tree-sitter-c-sharp = "0.20.0"
