--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ bytecount = "0.6"
 clap = { version = "4.3.0", features = ["derive", "wrap_help"] }
 encoding_rs = "0.8.14"
 encoding_rs_io = "0.1.6"
+grep-cli = "0.1.8"
 ignore = { package = "tree_sitter_grep_ignore", git = "https://github.com/helixbass/ripgrep", rev = "669ebd3", version = "0.4.20-dev.0" }
 libc = "0.2.144"
 libloading = "0.8.0"
