--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
       - run: cargo clippy --all-targets --tests -- -D warnings
       - run: cargo test
+        env:
+          TERM: linux
       - run: RUSTDOCFLAGS='--deny warnings' cargo doc --no-deps
         if: matrix.os == 'ubuntu-latest'
