--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,9 @@ tree-sitter-swift = "0.3.6"
 tree-sitter-toml = "0.20.0"
 tree-sitter-typescript = "0.20.2"
 
+[patch.crates-io]
+tree-sitter = { path = "../tree-sitter/lib" }
+
 [[bin]]
 name = "tree-sitter-grep"
 
