--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ assert_cmd = "2.0.11"
 escargot = "0.5.7"
 predicates = "3.0.3"
 shlex = "1.1.0"
+speculoos = "0.11.0"
 
 [features]
 default = ["bytecount/runtime-dispatch-simd"]
